k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: inu-garden-service
spec:
  selector:
    app: inu
    type: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
