k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inu-garden-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt

spec:
  tls:
    - hosts:
        - inu.bingsu.ninja
      secretName: inu-garden-ingress-cert
  rules:
    - host: inu.bingsu.ninja
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inu-garden-service
                port:
                  number: 3000
